--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
                                oninput="(function(){spiro.rotateSpeed = value / 100;})();">
                     </div>
                 </td>
-                <td><button tabindex="-1" onclick="randomize()">randomize</button></td>
+                <td>
+                        <div class="slidecontainer">
+                        maxoffset
+                        <input tabindex="-1" type="range" min="0" max="10" value="2" class="slider" id="maxoffset"
+                               oninput="(function(){ spiro.maxOffset = value; })();">
+                    </div>
+                </td>
             </tr>
             <tr>
                 <td>
@@ -60,7 +66,7 @@
                                oninput="(function(){spiro.width = value;})();">
                     </div>
                 </td>
-                <td><button tabindex="-1" id="pause" onclick="pause()">pause</button></td>
+                <td><button tabindex="-1" onclick="randomize()">randomize</button></td>
             </tr>
             <tr>
                 <td>
@@ -81,7 +87,7 @@
                                oninput="(function(){ spiro.blur = 1 - value / 100; })();">
                     </div>
                 </td>
-                <td></td>
+                <td><button tabindex="-1" id="pause" onclick="pause()">pause</button></td>
                 <td></td>
             </tr>
         </table>
@@ -105,7 +111,7 @@
             radius1: -7,
             radius2: -4,
             radius3: -1,
-            scale: 40, speed: 0.04, blur: 0.2, width: 3, offset: 0.0,
+            scale: 40, speed: 0.04, blur: 0.2, width: 3, offset: 0.0, maxOffset: 2,
             rotateSpeed: 0.01, rotateAngle: 0.0, loops: 10, x:-1, y:-1,
             draw: function () {
                 ctx.save()
@@ -207,7 +213,7 @@
             ctx.fillRect(0, 0, ww, hh);
 
             spiro.draw();
-            if (Math.abs(spiro.offset) > 2)
+            if (Math.abs(spiro.offset) > spiro.maxOffset)
                 spiro.speed = spiro.speed * -1;
             spiro.offset += spiro.speed;
             spiro.rotateAngle += spiro.rotateSpeed;
